# tauri-plugin-iap

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: clippy.yml  test.yml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
src/: bridge.rs  exception.rs  global_data.rs  iap.rs  lib.rs  product.rs  products_request_delegate.rs  transaction.rs  util.rs
swift-iap/: InAppPurchase.swift  Package.swift
swift-lib/: .gitignore  Package.swift
swift-lib/Sources/tauri-iap/: bridging-header.h  tauri_iap.swift
swift-lib/tauri-iap/: bridging-header.h  tauri_iap.swift
webview-dist/: index.d.ts  index.js
webview-src/: index.ts  rollup.config.js  tsconfig.json
