[package]
name = "tauri-plugin-iap"
version = "0.0.1"
authors = ["wtto00"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.6.0" }
serde = "1.0"
thiserror = "1.0"
objc2-store-kit = { version = "0.2.2", features = ["all"] }
objc2-foundation = "0.2.2"
objc2 = "0.5.2"
serde_json = "1.0.117"
once_cell = "1.19.0"
